--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: build
+name: ci
 
 on: [push]
 
@@ -6,12 +6,14 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    container:
+      image: crystallang/crystal
+
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
 
-    - name: checkout submodules
-      run: |
-        git submodule update --init
+    - name: Install dependencies
+      run: shards install
 
-    - name: test
-      run: make
+    - name: Run tests
+      run: crystal spec
