--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,8 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: install build tools
-      run: sudo apt install -y rake
+      run: |
+        apt install -y rake
 
     - name: build and run tests
       run: rake
