--- a/rakefile
+++ b/rakefile
@@ -30,3 +30,22 @@ task :fmt do
   end
 end
 task :lint => :fmt
+
+task :sample => %w[sample/main.c] do |t|
+  flags = %w[
+    -S
+    -masm=intel
+    -O0
+    -o /dev/stdout
+
+    -Wall
+    -Wextra
+
+    -fno-asynchronous-unwind-tables
+    -fno-exceptions
+    -fno-ident
+    -finhibit-size-directive
+    -Wl,-z,noexecstack
+  ].join(" ")
+  sh "gcc #{flags} #{t.source}"
+end
