make build dependent on fmt

--- a/rakefile
+++ b/rakefile
@@ -15,7 +15,7 @@ task :clean do
   sh 'rm -rfv tmp bin'
 end
 
-task :install do
+task :install => :fmt do
 	sh 'shards install'
 	sh 'shards build'
 end
