rm gcc, use ld and nasm

--- a/src/as/makefile
+++ b/src/as/makefile
@@ -1,9 +1,11 @@
-CC=gcc -nostartfiles
-cr:
+cr: run
 	crystal run as.cr
 run: build
 	./a.out
 clean:
 	rm -fv *.o *.out
 build:
-	$(CC) hi.s
+	nasm -f elf64 hi.asm
+	file hi.o
+	objdump -d -Mintel hi.o
+	ld hi.o
