use z run for samples

--- a/sample/makefile
+++ b/sample/makefile
@@ -1,9 +1,3 @@
-CC=gcc
 Z=../bin/z
-run: build
-	./a.out; exit 0
-clean:
-	rm -fv *.o *.s *.out
-build:
-	$(Z) compile main.c > z.s
-	$(CC) z.s
+run:
+	$(Z) run main.c
