replace rakefile with makefile, update readme

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,14 +12,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: install build tools
-      run: |
-        apt update -y
-        apt install -y rake tree
-
     - name: build and run tests
       run: |
-        tree
-        rake
+        make
       env:
         CI: true
